--- a/mk-cloud-function/requirements.txt
+++ b/mk-cloud-function/requirements.txt
@@ -1,2 +1,5 @@
 google-cloud-spanner==3.36.0
 functions-framework==3.3.0
+mysql-connector-python
+cloud-sql-python-connector[pymysql]
+SQLAlchemy==2.0.7
